<resources>
    <string name="app_name">Swipe To Favorite</string>
    <string name="title_discover">Discover</string>
    <string name="title_reconnect">Reconnect</string>
    <string name="title_bookings">Bookings</string>
    <string name="title_messages">Messages</string>
    <string name="title_blogs">Blogs</string>
    <string name="title_list">Skill List</string>
    <string name="title_coming_soon">Coming Soon</string>
    <string name="label_settings">Settings</string>
    <string name="desc_toolbar_back_arrow">toolbar back arrow</string>
    <string name="desc_toolbar_center_title">toolbar center title</string>
    <string name="label_coming_soon">Coming Soon</string>
    <string name="list_screen_heading_msg">
        <font color="#6A6A6A">1:1 guidance from</font> <font color="#2C8F77" ><u>live</u> </font><font color="#6A6A6A">specialist</font>
</string>
    <string name="desc_explore_task_human_image">explore task human image</string>
    <string name="label_ok">Ok</string>
    <string name="label_warning">Warning</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="label_add_to_favorite">Add to Favorite</string>
    <string name="label_added_to_fav">Added</string>
    <string name="label_remove_favorite">Remove Favorite</string>
    <string name="label_removed">Removed</string>

</resources>